objects/ssot__EmailPublication__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BodyTxt__c</fullName>
        <label>Body Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClickThroughPct__c</fullName>
        <label>Click Through Percent</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ClickToOpenPct__c</fullName>
        <label>Click To Open Percent</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeliveryPct__c</fullName>
        <label>Delivery Percent</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DurationSecondsQty__c</fullName>
        <label>Duration Seconds Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EnagementAssetContentId__c</fullName>
        <label>Engagement Asset Content</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnagementAssetId__c</fullName>
        <label>Engagement Asset</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EnagementPublicationTypeId__c</fullName>
        <label>Engagement Publication Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementChannelTypeId__c</fullName>
        <label>Engagement Channel Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementPublicationNbr__c</fullName>
        <label>Engagement Publication Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementPublicationStatusId__c</fullName>
        <label>Engagement Publication Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EngagementTopicGroupId__c</fullName>
        <label>Engagement Topic Group</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ErrorMessageTxt__c</fullName>
        <label>Error Message Text</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FailedRecordCt__c</fullName>
        <label>Failed Record Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__FromAddr__c</fullName>
        <label>From Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FromName__c</fullName>
        <label>From Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HTMLBodyTxt__c</fullName>
        <label>HTML Body</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__HasAttachment__c</fullName>
        <label>Has Attachment</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Email Publication Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsTracked__c</fullName>
        <label>Is Tracked</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OpenPct__c</fullName>
        <label>Open Percent</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OptOutPct__c</fullName>
        <label>Opt Out Percent</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ParentEngagementPublicationId__c</fullName>
        <label>Parent Engagement Publication</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PublicationAttemptsNbr__c</fullName>
        <label>Publication Attempts Number</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PublicationStatusDt__c</fullName>
        <label>Publication Status Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ReplyToAddr__c</fullName>
        <label>Reply To Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ScheduledDt__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__SendClassificationId__c</fullName>
        <label>Send Classification</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SendMechanismName__c</fullName>
        <label>Send Mechanism Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SuccessfulRecordCt__c</fullName>
        <label>Successful Record Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalDeliveredQty__c</fullName>
        <label>Total Delivered Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalHardBounceQty__c</fullName>
        <label>Total Hard Bounce Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalOpensQty__c</fullName>
        <label>Total Opens Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalPublicationItemsCt__c</fullName>
        <label>Total Publication Items Count</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalSentQty__c</fullName>
        <label>Total Sent Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalSoftBounceQty__c</fullName>
        <label>Total Soft Bounce Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalSpamComplaintsQty__c</fullName>
        <label>Total Spam Complaints Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalTrackedLinkClicksQty__c</fullName>
        <label>Total Tracked Link Clicks Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueClickThroughPct__c</fullName>
        <label>Unique Click Through Percent</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueOpensQty__c</fullName>
        <label>Unique Opens Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueOptOutsQty__c</fullName>
        <label>Unique Opt Outs Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UniqueTrackedLinkClicksQty__c</fullName>
        <label>Unique Tracked Link Clicks Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761167684_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DeviceApplicationTemplate_Id_map_Ema_rel</label>
        <referenceTo>ssot__DeviceApplicationTemplate__dlm</referenceTo>
        <relationshipLabel>DeviceApplicationTemplate_Id_map_Ema_rel</relationshipLabel>
        <relationshipName>rel_1697761167684_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761170323_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailPublication_EnagementAssetId_ma_rel</label>
        <referenceTo>ssot__DeviceApplicationTemplate__dlm</referenceTo>
        <relationshipLabel>EmailPublication_EnagementAssetId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761170323_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761170391_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailPublication_EnagementAssetId_ma_rel</label>
        <referenceTo>ssot__EmailTemplate__dlm</referenceTo>
        <relationshipLabel>EmailPublication_EnagementAssetId_ma_rel</relationshipLabel>
        <relationshipName>rel_1697761170391_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>